<resources>
    <string name="app_name">ImageUploaderTest</string>


    <string name="uploader_activity_cd_user_avatar">User avatar</string>
    <string name="uploader_activity_change_photo">Change photo</string>
    <string name="uploader_activity_choose_image">Select via</string>
    <string name="uploader_activity_camera">Camera</string>
    <string name="uploader_activity_photos">Library</string>

    <string name="uploader_activity_prompt_url">URL</string>
    <string name="uploader_activity_prompt_app_token">application token</string>
    <string name="uploader_activity_prompt_user_token">token postulante</string>
    <string name="uploader_activity_action_upload">Upload</string>


    <string name="uploader_activity_no_photo_selected">Please select an image first</string>
    <string name="uploader_activity_request_output">Result: %s</string>

    <string name="error_field_required">This field is required</string>
    <string name="form_data_part_name">form data part</string>
    <string name="filename">filename</string>

</resources>
